--- a/slides/refs.bib
+++ b/slides/refs.bib
@@ -1,6 +1,6 @@
 @book{boyd2004convex,
-  title={Convex optimization},
+  title={Convex Optimization},
   author={Boyd, S. and Vandenberghe, L.},
   year={2004},
-  publisher={Cambridge university press}
+  publisher={Cambridge University Press}
 }
