--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -1,6 +1,6 @@
 \documentclass[usepdftitle=false]{beamer}
 
-\usepackage{zhbeamer}
+\usepackage{zhslides}
 \input{defs.tex}
 
 \title{Slide Template}
