--- a/article/zharticle.sty
+++ b/article/zharticle.sty
@@ -1,4 +1,4 @@
-\usepackage[left=1.2in, right=1.2in]{geometry}
+\usepackage[margin=1.5in]{geometry}
 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
