update: book info and copyright page

--- a/book/sections/title.tex
+++ b/book/sections/title.tex
@@ -21,16 +21,13 @@
     \end{flushleft}
     \clearpage
     \vspace*{\fill}
-    \begin{flushleft}
-        Some text regarding the copyright, date, examination committee, \etc\
-        \vspace*{0.5in}
-
-        \blindtext
-        \vspace*{0.5in}
-
-        \blindtext
-        \vspace*{0.5in}
-    \end{flushleft}
+    \begin{itemize}[leftmargin=0pt, label={}]\small
+        \item Some text regarding the copyright, date, examination committee, \etc\
+        \item \blindtext
+        \item \blindtext
+        \item 
+        \item \blindtext
+    \end{itemize}
     \vspace*{\fill}
     \clearpage
     \vspace*{1.6in}
